# fetch_features

./: LICENSE.md  README.md  pyproject.toml
src/fetcher/: __main__.py  access_genbank.py  database.py  gui.py  user_input.py  utils.py
