[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fetch_features"
version = "0.2.12"
authors = [
    {name = "Ivan Muñoz-Gutierrez", email = "ivan.munoz.gutierrez@gmail.com"},
]
description = "Fetch features from a list of accession or BioSample numbers."
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "unique identifier", "accession number", "BioSample number", "GenBank",
    "sequence features"
]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "biopython",
    "customtkinter",
    "darkdetect",
    "numpy",
    "pandas",
    "python-dateutil",
    "pytz",
    "six",
    "tzdata",
    "openpyxl",
    "setuptools"
]

[project.urls]
"Homepage" = "https://github.com/ivanmugu/fetch_features"

[project.scripts]
fetch_features = "fetcher.__main__:main"